--- a/css/slyles.css
+++ b/css/slyles.css
@@ -75,6 +75,8 @@ body {
 
 .page-header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .page-header-container {
@@ -185,6 +187,9 @@ body {
     url(../images/background/people-office\ 1.jpeg);
   background-size: cover;
   background-color: #2e2f42;
+  max-width: 1440px;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .main-title {
@@ -301,7 +306,15 @@ body {
   align-items: center;
   gap: 24px;
 }
-
+.description-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 112px;
+  background-color: #f4f4fd;
+  border-radius: 4px;
+  margin-bottom: 8px;
+}
 /* ====== / SECTION 3 ====== */
 
 /* ====== TEAM CARDS ===== */
@@ -316,6 +329,8 @@ body {
 .team-cards-background {
   background-color: var(--background-color);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-cards-container {
@@ -343,9 +358,9 @@ body {
 }
 .social-list-link:hover,
 .social-list-link:focus {
-  background: #4d5ae5;
+  background-color: #404bbf;
 }
-/* ====== /TEAM CARDS ===== */
+
 .cards-info {
   display: flex;
   flex-direction: column;
@@ -353,6 +368,47 @@ body {
   align-items: center;
   padding: 32px 16px;
 }
+
+/* ====== /TEAM CARDS ===== */
+
+/* ==== SECTION 5 ======= */
+.castomers-title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 36px;
+  line-height: 1.11;
+  color: #2e2f42;
+  margin-bottom: 72px;
+}
+.castomers-list {
+  display: flex;
+  gap: 24px;
+}
+.castomer-list-item {
+  width: calc((100% - 120px) / 6);
+  height: 88px;
+}
+.castomers-list-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  color: #8e8f99;
+}
+
+.castomers-list-link:hover,
+.castomers-list-link:focus {
+  color: #404bbf;
+  border-color: #404bbf;
+}
+.costomer-icon {
+  fill: currentColor;
+}
+/* ==== /SECTION 5 ======= */
 /* ======= FOOTER ======== */
 
 .page-footer-container {
