--- a/css/slyles.css
+++ b/css/slyles.css
@@ -482,6 +482,17 @@ body {
 .main-port-btn:hover,
 .main-port-btn:focus {
   border: 1px solid transparent;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.main-btn-filter:hover,
+.main-btn-filter:focus {
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.btn-list-item {
+  display: block;
 }
 
 .port-btn {
