--- a/css/slyles.css
+++ b/css/slyles.css
@@ -175,7 +175,13 @@ body {
 /* ======= / HEADER ======== */
 
 /* ====== HERO ======*/
-
+.hero1 {
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/img-name.jpeg);
+}
 .hero {
   padding-top: 188px;
   padding-bottom: 188px;
@@ -482,11 +488,6 @@ body {
 .main-port-btn:hover,
 .main-port-btn:focus {
   border: 1px solid transparent;
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-.main-btn-filter:hover,
-.main-btn-filter:focus {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
@@ -522,7 +523,14 @@ body {
 }
 
 /* ====== MAIN ======*/
-
+.service-images {
+  display: block;
+}
+.service-images:hover,
+.service-images:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
 .service-card-background {
   background: #ffffff;
 }
