--- a/css/slyles.css
+++ b/css/slyles.css
@@ -175,7 +175,7 @@ body {
 /* ======= / HEADER ======== */
 
 /* ====== HERO ======*/
-.hero1 {
+.hero-fix {
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
