--- a/css/slyles.css
+++ b/css/slyles.css
@@ -180,7 +180,7 @@ body {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/img-name.jpeg);
+    url(../images/background/people-office\ 1.jpeg);
 }
 .hero {
   padding-top: 188px;
