--- a/css/slyles.css
+++ b/css/slyles.css
@@ -179,6 +179,7 @@ body {
 .hero {
   padding-top: 188px;
   padding-bottom: 188px;
+  background: rgba(46, 47, 66, 0.7);
   background: #2e2f42;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
@@ -190,9 +191,6 @@ body {
   max-width: 1440px;
   background-repeat: no-repeat;
   background-position: center;
-}
-.hero {
-  background: url(../images/background/people-office\ 1.jpeg);
 }
 
 .main-title {
