--- a/css/slyles.css
+++ b/css/slyles.css
@@ -184,7 +184,7 @@ body {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/people-office\ 1.jpeg);
+    url(../images/people-office.jpeg);
   background-size: cover;
   background-color: #2e2f42;
   max-width: 1440px;
