--- a/css/slyles.css
+++ b/css/slyles.css
@@ -187,7 +187,7 @@ body {
     url(../images/people-office.jpeg);
   background-size: cover;
   background-color: #2e2f42;
-  max-width: 1440px;
+  min-width: 1440px;
   background-repeat: no-repeat;
   background-position: center;
 }
